syntax = "proto3";
package pb;

option go_package = "snple.com/kokomi/pb;pb";

message Port {
    string id = 1;
    string device_id = 2;
    string name = 3;
    string desc = 4;
    string tags = 5;
    string type = 6;
    string network = 7;
    string address = 8;
    string config = 9;
    sint32 status = 10;
    sint32 link = 11;
    int64 created = 12;
    int64 updated = 13;
    int64 deleted = 14;
}
